--- a/GraphicsAssessment/GraphicsAssessment/GraphicsAssessment.vcxproj
+++ b/GraphicsAssessment/GraphicsAssessment/GraphicsAssessment.vcxproj
@@ -116,14 +116,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="FlyCamera.cpp" />
+    <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="CameraApp.cpp" />
     <ClCompile Include="Gizmos.cpp" />
     <ClCompile Include="gl_core_4_4.c" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Dependencies\gl_core_4_4.h" />
-    <ClInclude Include="FlyCamera.h" />
+    <ClInclude Include="Application.h" />
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="CameraApp.h" />
     <ClInclude Include="Gizmos.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
