--- a/GraphicsAssessment/GraphicsAssessment/GraphicsAssessment.vcxproj
+++ b/GraphicsAssessment/GraphicsAssessment/GraphicsAssessment.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="Gizmos.cpp" />
     <ClCompile Include="gl_core_4_4.c" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Dependencies\gl_core_4_4.h" />
@@ -129,6 +130,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CameraApp.h" />
     <ClInclude Include="Gizmos.h" />
+    <ClInclude Include="Transform.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
