--- a/GraphicsAssessment/GraphicsAssessment/GraphicsAssessment.vcxproj
+++ b/GraphicsAssessment/GraphicsAssessment/GraphicsAssessment.vcxproj
@@ -116,6 +116,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Application.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CameraApp.cpp" />
     <ClCompile Include="Gizmos.cpp" />
@@ -125,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Dependencies\gl_core_4_4.h" />
+    <ClInclude Include="Application.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CameraApp.h" />
     <ClInclude Include="Gizmos.h" />
