--- a/GraphicsAssessment/RenderingGeometry/RenderingGeometry.vcxproj.filters
+++ b/GraphicsAssessment/RenderingGeometry/RenderingGeometry.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="..\GraphicsAssessment\GeometryApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Mesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\GraphicsAssessment\GeometryApp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
