--- a/GraphicsAssessment/RenderingGeometry/RenderingGeometry.vcxproj
+++ b/GraphicsAssessment/RenderingGeometry/RenderingGeometry.vcxproj
@@ -69,8 +69,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\glm\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)Dependencies\GLFW\lib-vc2015;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)Dependencies\imgui;$(SolutionDir)Dependencies\bootstrap\include\;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\glm\;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)Dependencies\bootstrap\lib-vc2015;$(SolutionDir)Dependencies\GLFW\lib-vc2015;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -79,7 +79,7 @@
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;%(AdditionalDependencies);bootstrap.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -116,12 +116,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\GraphicsAssessment\GeometryApp.cpp" />
-    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="RenderGeometryApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\GraphicsAssessment\GeometryApp.h" />
-    <ClInclude Include="Mesh.h" />
+    <ClInclude Include="RenderGeometryApplication.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
