--- a/GraphicsAssessment/RenderingGeometry/RenderingGeometry.vcxproj.filters
+++ b/GraphicsAssessment/RenderingGeometry/RenderingGeometry.vcxproj.filters
@@ -15,18 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\GraphicsAssessment\GeometryApp.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Mesh.cpp">
+    <ClCompile Include="RenderGeometryApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\GraphicsAssessment\GeometryApp.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Mesh.h">
+    <ClInclude Include="RenderGeometryApplication.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
