--- a/GraphicsAssessment/RenderingGeometry/RenderingGeometry.vcxproj.filters
+++ b/GraphicsAssessment/RenderingGeometry/RenderingGeometry.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="RenderGeometryApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RenderGeometryApplication.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
